# Mods4Versus

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  package-lock.json  package.json  temp_key.txt  updater.json
frontend/: index.html  script.js  styles.css  tips.json
src-tauri/: Cargo.toml  installer.nsi  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: commands.rs  main.rs  mod_types.rs  paths.rs  vpk_utils.rs
